# book-of-shadows-qt

./: .gitignore  CMakeLists.txt  README.md  dbinitializer.cpp  dbinitializer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
__translations/: book_en_gb
about/: aboutdialog.cpp  aboutdialog.ui
animals/: animalform.cpp  animalform.h  animalform.ui  animalframe.cpp  animalframe.h  animalframe.ui  animalmodel.cpp  animalmodel.h
codex/: codexframe.cpp  codexframe.h  codexframe.ui  codexmodel.cpp  codexmodel.h
colours/: colourform.cpp  colourform.h  colourform.ui  colourframe.cpp  colourframe.h  colourframe.ui  colourmodel.cpp  colourmodel.h  coloursframe.cpp  coloursframe.h  coloursframe.ui
components/: editor.cpp  editor.h  editor.ui
crystals/: crystalcorresponderchooser.cpp  crystalcorresponderchooser.h  crystalcorresponderchooser.ui  crystalform.cpp  crystalform.h  crystalform.ui  crystalframe.cpp  crystalframe.h  crystalframe.ui  crystalmodel.cpp  crystalmodel.h
docs/: index.html
docs/images/: documentation.odt
docs/styles/: styles.css
gods/: godform.cpp  godform.h  godform.ui  godframe.cpp  godframe.h  godframe.ui  godmodel.cpp  godmodel.h
herbs/: herbform.cpp  herbform.h  herbform.ui  herbframe.cpp  herbframe.h  herbframe.ui  herbmodel.cpp  herbmodel.h
notes/: noteform.cpp  noteform.h  noteform.ui  notemodel.cpp  notemodel.h  notesframe.cpp  notesframe.h  notesframe.ui
planets/: planetform.cpp  planetform.h  planetform.ui  planetmodel.cpp  planetmodel.h  planetsframe.cpp  planetsframe.h  planetsframe.ui
polarity/: polarityform.cpp  polarityform.h  polarityform.ui  polarityframe.cpp  polarityframe.h  polarityframe.ui  polaritymodel.cpp  polaritymodel.h  polarityviewdialog.cpp  polarityviewdialog.h  polarityviewdialog.ui
runestones/: corresponderchooser.cpp  corresponderchooser.h  corresponderchooser.ui  glyphmodel.cpp  glyphmodel.h  runespellmodel.cpp  runespellmodel.h  runestonecorresponderchooser.cpp  runestonecorresponderchooser.h  runestonecorresponderchooser.ui  runestoneform.cpp  runestoneform.h  runestoneform.ui  runestoneframe.cpp  runestoneframe.h  runestoneframe.ui  runestonemodel.cpp  runestonemodel.h  tagmodel.cpp  tagmodel.h
settings/: settingsframe.cpp  settingsframe.h  settingsframe.ui  settingsmodel.cpp  settingsmodel.h
spellbook/: glyphmodel.cpp  glyphmodel.h  handle.cpp  handle.h  renderhandles.cpp  renderhandles.h  resizablepixmap.cpp  resizablepixmap.h  runespellform.cpp  runespellform.h  runespellform.ui  runespellframe.cpp  runespellframe.h  runespellframe.ui  runespellmodel.cpp  runespellmodel.h  tagmodel.cpp
tarot/: tarotcorresponderchooser.cpp  tarotcorresponderchooser.h  tarotcorresponderchooser.ui  tarotform.cpp  tarotform.h  tarotform.ui  tarotframe.cpp  tarotframe.h  tarotframe.ui  tarotmodel.cpp  tarotmodel.h
trees/: treeform.cpp  treeform.h  treeform.ui  treemodel.cpp  treemodel.h  treesframe.cpp  treesframe.h  treesframe.ui
util/: compare.cpp  compare.h
zodiac/: zodiacform.cpp  zodiacform.h  zodiacform.ui  zodiacframe.cpp  zodiacframe.h  zodiacframe.ui  zodiacmodel.cpp  zodiacmodel.h
